# bigdata-climate-monitoring

./: .gitignore  HANDOFF_STREAM_SERVING.md  README.md  docker-compose.airflow.yml  docker-compose.ml.yml  requirements.txt
air-quality-ml/: .dockerignore  CHANGELOG.md  CHANGELOG_WINDOWS_FIX.md  CLEANUP_REPORT.md  Dockerfile  MLLIB_MLFLOW_ASSESSMENT.md  ML_FLOW_IMPROVEMENT_PLAN.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  WINDOWS_README.md  pyproject.toml  requirements.txt  test_load_features.py
air-quality-ml/configs/: alert_h1.yaml  alert_h12.yaml  alert_h24.yaml  alert_h3.yaml  alert_h6.yaml  base.yaml  data_contract.yaml  feature_store.yaml  monitoring_thresholds.yaml  training_cloud_cover_h1.yaml  training_cloud_cover_h2.yaml  training_cloud_cover_h3.yaml  training_cloud_cover_h4.yaml  training_cloud_cover_h5.yaml  training_cloud_cover_h6.yaml  training_pm25_h1.yaml  training_pm25_h12.yaml  training_pm25_h2.yaml  training_pm25_h24.yaml  training_pm25_h3.yaml  training_pm25_h4.yaml  training_pm25_h5.yaml  training_pm25_h6.yaml  training_precipitation_h1.yaml  training_precipitation_h2.yaml  training_precipitation_h3.yaml  training_precipitation_h4.yaml  training_precipitation_h5.yaml  training_precipitation_h6.yaml  training_pressure_h1.yaml  training_pressure_h2.yaml  training_pressure_h3.yaml  training_pressure_h4.yaml  training_pressure_h5.yaml  training_pressure_h6.yaml  training_temp_h1.yaml  training_temp_h2.yaml  training_temp_h3.yaml  training_temp_h4.yaml  training_temp_h5.yaml  (+7 more)
air-quality-ml/dashboard/: app.py
air-quality-ml/docs/: MIGRATION.md  (+3 more)
(+197 files in other folders)
